refactor: unify exception handling